# playground-spa-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  main.js  package-lock.json  package.json
leptos/: README.md
perseus/: README.md
src/: app.rs  lib.rs
yew/: index.html
yew/src/: app.rs  lib.rs
