[package]
name = "yew-app"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
# Less code to include into binary.
panic = 'abort'
# Optimization over all codebase (better optimization, slower build).
codegen-units = 1
# Optimization for size (more aggresive).
opt-level = 'z' # or 's' for a less aggressiv alternative.
# Link time optimization using using whole-program analysis.
lto = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew", rev = "f93fa3c8b2106dca4eb768ae005ef530310b7721" }
yew-functional = {git = "https://github.com/yewstack/yew", rev = "f93fa3c8b2106dca4eb768ae005ef530310b7721" }
yew-functional-macro = {git = "https://github.com/yewstack/yew", rev = "f93fa3c8b2106dca4eb768ae005ef530310b7721" }
wasm-bindgen = "0.2.67"
